zdep = dependency('zlib', fallback: ['zlib', 'zlib_dep'])

mrustc_includes = include_directories(
    'include',
    '.',

    'parse',

    'expand',
    'macro_rules',

    'ast',

    'resolve',
    'hir',
    'hir_conv',
    'hir_typeck',
    'hir_expand',

    'mir',

    'trans',
)

version = custom_target(
    'version',
    input: 'version.py',
    output: 'version.cpp',
    build_always_stale: true,
    install: false,
    command: [
        python, '@INPUT@',
        '--output-file', '@OUTPUT@',
        '--major-version', major_version.to_string(),
        '--minor-version', minor_version.to_string(),
        '--patch-version', patch_version.to_string(),
    ],
)
version_cpp = version[0]

mrustc_exe = executable(
    'mrustc',
    'debug.cpp',
    'main.cpp',
    'ident.cpp',
    'span.cpp',
    'rc_string.cpp',
    version_cpp,

    'parse/root.cpp',
    'parse/types.cpp',
    'parse/tokentree.cpp',
    'parse/pattern.cpp',
    'parse/paths.cpp',
    'parse/ttstream.cpp',
    'parse/token.cpp',
    'parse/ttstream.hpp',
    'parse/expr.cpp',
    'parse/lex.cpp',
    'parse/interpolated_fragment.cpp',
    'parse/parseerror.cpp',
    'parse/tokenstream.cpp',

    'expand/crate_tags.cpp',
    'expand/concat.cpp',
    'expand/format_args.cpp',
    'expand/derive.cpp',
    'expand/std_prelude.cpp',
    'expand/env.cpp',
    'expand/cfg.cpp',
    'expand/macro_rules.cpp',
    'expand/test_harness.cpp',
    'expand/include.cpp',
    'expand/mod.cpp',
    'expand/asm.cpp',
    'expand/file_line.cpp',
    'expand/lang_item.cpp',
    'expand/test.cpp',
    'expand/proc_macro.cpp',
    'expand/stringify.cpp',
    'expand/rustc_diagnostics.cpp',
    'macro_rules/parse.cpp',
    'macro_rules/mod.cpp',
    'macro_rules/eval.cpp',

    'ast/types.cpp',
    'ast/dump.cpp',
    'ast/crate.cpp',
    'ast/pattern.cpp',
    'ast/expr.cpp',
    'ast/path.cpp',
    'ast/ast.cpp',

    'resolve/absolute.cpp',
    'resolve/use.cpp',
    'resolve/index.cpp',
    'hir/generic_params.cpp',
    'hir/type.cpp',
    'hir/crate_post_load.cpp',
    'hir/dump.cpp',
    'hir/hir.cpp',
    'hir/pattern.cpp',
    'hir/expr_ptr.cpp',
    'hir/crate_ptr.cpp',
    'hir/from_ast.cpp',
    'hir/serialise.cpp',
    'hir/expr.cpp',
    'hir/pattern.hpp',
    'hir/visitor.cpp',
    'hir/serialise_lowlevel.cpp',
    'hir/path.cpp',
    'hir/deserialise.cpp',
    'hir/from_ast_expr.cpp',
    'hir_conv/bind.cpp',
    'hir_conv/expand_type.cpp',
    'hir_conv/resolve_ufcs.cpp',
    'hir_conv/markings.cpp',
    'hir_conv/constant_evaluation.cpp',
    'hir_expand/erased_types.cpp',
    'hir_expand/closures.cpp',
    'hir_expand/annotate_value_usage.cpp',
    'hir_expand/vtable.cpp',
    'hir_expand/ufcs_everything.cpp',
    'hir_expand/reborrow.cpp',
    'hir_typeck/helpers.cpp',
    'hir_typeck/expr_visit.cpp',
    'hir_typeck/expr_check.cpp',
    'hir_typeck/expr_cs.cpp',
    'hir_typeck/impl_ref.cpp',
    'hir_typeck/static.cpp',
    'hir_typeck/outer.cpp',
    'hir_typeck/common.cpp',

    'mir/check_full.cpp',
    'mir/helpers.cpp',
    'mir/optimise.cpp',
    'mir/mir.cpp',
    'mir/dump.cpp',
    'mir/visit_crate_mir.cpp',
    'mir/mir_builder.cpp',
    'mir/from_hir_match.cpp',
    'mir/cleanup.cpp',
    'mir/check.cpp',
    'mir/from_hir.cpp',
    'mir/mir_ptr.cpp',

    'trans/enumerate.cpp',
    'trans/codegen.cpp',
    'trans/monomorphise.hpp',
    'trans/mangling.cpp',
    'trans/target.cpp',
    'trans/trans_list.cpp',
    'trans/codegen_mmir.cpp',
    'trans/monomorphise.cpp',
    'trans/allocator.cpp',
    'trans/codegen_c.cpp',
    'trans/codegen_c_structured.cpp',

    include_directories: mrustc_includes,
    dependencies: [zdep, common],
)
